SoftLRUCache